[gd_scene load_steps=10 format=3 uid="uid://bju4jxwr7a0pg"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_d36gk"]
[ext_resource type="PackedScene" uid="uid://bpkphu8qj137m" path="res://scenes/bg.tscn" id="1_qy3kl"]
[ext_resource type="PackedScene" uid="uid://b5pwnh1tmyrnl" path="res://scenes/ground.tscn" id="2_qu4oq"]
[ext_resource type="PackedScene" uid="uid://bhtein0chknfn" path="res://scenes/dino.tscn" id="3_l41lx"]
[ext_resource type="PackedScene" uid="uid://lyf4a3sklk1o" path="res://scenes/hud.tscn" id="5_cgpie"]
[ext_resource type="PackedScene" uid="uid://lotwuige1aee" path="res://scenes/game_over.tscn" id="6_6n2u1"]
[ext_resource type="Script" path="res://scenes/UserDataHandler.gd" id="7_drti8"]
[ext_resource type="PackedScene" path="res://scenes/coin.tscn" id="7_kne81"]
[ext_resource type="Script" path="res://scenes/coin_manager.gd" id="8_fmuii"]

[node name="Main" type="Node"]
script = ExtResource("1_d36gk")

[node name="Request Manager" type="Node" parent="."]
script = ExtResource("7_drti8")

[node name="GetDataRequest" type="HTTPRequest" parent="Request Manager"]

[node name="AuthenticationRequest" type="HTTPRequest" parent="Request Manager"]

[node name="LoginCheckRequest" type="HTTPRequest" parent="Request Manager"]

[node name="UpdateDataRequest" type="HTTPRequest" parent="Request Manager"]

[node name="RecordRunRequest" type="HTTPRequest" parent="Request Manager"]

[node name="PurchaseItem" type="HTTPRequest" parent="Request Manager"]

[node name="Bg" parent="." instance=ExtResource("1_qy3kl")]
scroll_offset = Vector2(1100, 460.5)

[node name="Ground" parent="." instance=ExtResource("2_qu4oq")]
position = Vector2(1, -2)

[node name="Dino" parent="." instance=ExtResource("3_l41lx")]
position = Vector2(153, 489)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="HUD" parent="." instance=ExtResource("5_cgpie")]

[node name="GameOver" parent="." instance=ExtResource("6_6n2u1")]
process_mode = 2

[node name="CoinManager" type="Node" parent="."]
script = ExtResource("8_fmuii")

[node name="Coin" parent="." instance=ExtResource("7_kne81")]
position = Vector2(399, 468)

[node name="Coin2" parent="." instance=ExtResource("7_kne81")]
position = Vector2(440, 466)

[node name="Coin3" parent="." instance=ExtResource("7_kne81")]
position = Vector2(484, 469)

[node name="Coin4" parent="." instance=ExtResource("7_kne81")]
position = Vector2(529, 473)

[node name="Coin5" parent="." instance=ExtResource("7_kne81")]
position = Vector2(571, 473)

[node name="Coin6" parent="." instance=ExtResource("7_kne81")]
position = Vector2(607, 472)

[node name="Coin7" parent="." instance=ExtResource("7_kne81")]
position = Vector2(647, 472)
